--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -39,12 +39,10 @@ body {
   @include breakpoint($large) {
     float: right;
     width: calc(100%);
-    padding-right: $right-sidebar-width-narrow;
   }
 
   @include breakpoint($x-large) {
-    width: calc(100%;
-    padding-right: $right-sidebar-width;
+    width: calc(100%);
   }
 
   .page__inner-wrap {
