--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -38,11 +38,13 @@ body {
 .page {
   @include breakpoint($large) {
     float: right;
-    width: calc(100%);
+    width: 100%;
+		margin-right: 0;
   }
 
   @include breakpoint($x-large) {
-    width: calc(100%);
+    width: 100%;
+		margin-right: 0;
   }
 
   .page__inner-wrap {
