--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -7,11 +7,14 @@
   margin-bottom: 2em;
 
   @include breakpoint($large) {
-    padding-right: 0;
+    float: right;
+    width: calc(100% - #{$right-sidebar-width-nqd});
+    padding-right: $right-sidebar-width-nqd;
   }
 
   @include breakpoint($x-large) {
-    padding-right: 0;
+    width: calc(100% - #{$right-sidebar-width-nqd});
+    padding-right: $right-sidebar-width-nqd;
   }
 }
 
