--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,21 @@
 <div class="page__footer-follow">
   <ul class="social-icons">
-    {% if site.data.ui-text[site.locale].follow_label %}
-      <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
+    {% if page.layout != 'index' %}
+    	{% assign posts=site.posts | where:"lang-ref", page.lang-ref | sort: 'lang' %}
+    	{% if posts.size == 0 %}
+        	{% assign posts=site.pages | where:"lang-ref", page.lang-ref | sort: 'lang' %}
+    	{% endif %}
+    	{% if posts.size > 1 %}
+    	<footer class="lang-options">
+        	<em>Read this page in a different language:</em>
+        	<ul>
+        {% for post in posts %}
+        		<li><a href="{{ site.base-url }}{{ post.url }}" class="{{ post.lang }} title="View in {{post.lang}}">{{ post.lang }}</a></li>
+        {% endfor %}
+        	</ul>
+    	</footer>
+    	{% endif %}
     {% endif %}
-
-    {% if site.footer.links %}
-      {% for link in site.footer.links %}
-        {% if link.label and link.url %}
-          <li><a href="{{ link.url }}" rel="nofollow noopener noreferrer"><i class="{{ link.icon | default: 'fas fa-link' }}" aria-hidden="true"></i> {{ link.label }}</a></li>
-        {% endif %}
-      {% endfor %}
-    {% endif %}
-
-    <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ '/feed.xml' | relative_url }}{% endif %}"><i class="fas fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
   </ul>
 </div>
 
