--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,18 @@
 <div class="page__footer-follow">
   <ul class="social-icons">
     {% if page.layout != 'index' %}
-    	{% assign posts=site.posts | where:"lang-ref", page.lang-ref | sort: 'lang' %}
+    	{% assign posts=site.posts | where:"ref", page.ref | sort: 'lang' %}
     	{% if posts.size == 0 %}
-        	{% assign posts=site.pages | where:"lang-ref", page.lang-ref | sort: 'lang' %}
+        	{% assign posts=site.pages | where:"ref", page.ref | sort: 'lang' %}
     	{% endif %}
     	{% if posts.size > 1 %}
-    	<footer class="lang-options">
-        	<em>Read this page in a different language:</em>
+    		<footer class="lang-options">
         	<ul>
-        {% for post in posts %}
-        		<li><a href="{{ site.base-url }}{{ post.url }}" class="{{ post.lang }} title="View in {{post.lang}}">{{ post.lang }}</a></li>
-        {% endfor %}
+        		{% for post in posts %}
+        			<li><a href="{{ site.base-url }}{{ post.url }}" class="{{ post.lang }} title="View in {{post.lang}}">{{ post.lang }}</a></li>
+        		{% endfor %}
         	</ul>
-    	</footer>
+    		</footer>
     	{% endif %}
     {% endif %}
   </ul>
